feat: configurable image hosts (#2243)